--- a/packages/string/package.json
+++ b/packages/string/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@tryghost/string",
+  "name": "@3hson/string",
   "version": "0.1.11",
   "repository": "https://github.com/TryGhost/Ghost-SDK/tree/master/packages/string",
   "author": "Ghost Foundation",
